--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    
+    <meta name="description" content="Pagina web de blog de café">
     <!-- Preffetch -->
 
     <link rel="prefetch" href="nosotros.html" as="document">
@@ -111,7 +112,7 @@
                         <span class="widget-curso__info">20</span>
                     </p>
 
-                    <a href="entrada.html" class="boton boton--secundario">Más información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Más información sobre nuestros cursos</a>
 
                 </li>
                 <li class="widget-curso">
@@ -123,7 +124,7 @@
                         <span class="widget-curso__info">20</span>
                     </p>
 
-                    <a href="entrada.html" class="boton boton--secundario">Más información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Más información sobre nuestros cursos</a>
 
                 </li>
                 
@@ -145,6 +146,7 @@
             </div>
         </div>
     </footer>
+
     
     <script src="js/modernizr.js"></script>
 </body>
